packages/components/src/Card/Card.css
:root {
  --card--accent-color: var(--color-grey);
  --card--base-padding: var(--space-base);
}

.card {
  --card--border-color: var(--color-border);
  display: block;
  width: 100%;
  border: var(--border-base) solid var(--card--border-color);
  border-radius: var(--radius-base);
  outline-color: var(--color-focus);
  background-color: var(--color-surface);
}

/* Adjust `Content` components public padding to match the cards */

.card > * {
  --public-content--padding: var(--card--base-padding);
}

/* Remove the nested `Content` components public padding */

.card > * > * {
  --public-content--padding: 0;
}

.card:active {
  outline: 0;
}

.accent {
  border-top-width: 0;
}

.accent::before {
  content: " ";
  display: block;
  margin: 0 calc(-1 * var(--border-base));
  border-top: 0.5rem solid var(--card--accent-color);
  border-radius: var(--radius-base) var(--radius-base) 0 0;
}

.clickable {
  --card--border-color: transparent;
  box-shadow: var(--shadow-base);
  color: inherit;
  text-decoration: inherit;
  cursor: pointer;
  transition: all var(--timing-quick) linear;
}

.clickable:hover,
.clickable:focus {
  background-color: var(--color-surface--hover);
}

.header {
  display: flex;
  flex-direction: row;
  padding: var(--card--base-padding);
  background-color: var(--color-surface--background);
}

.button {
  margin-left: auto;
}

